# DevAI-R1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API_GUIDE.md  COMMANDS_REFERENCE.md  CONTRIBUTING.md  DevAI_R1.py  FEEDBACK_CASES.md  INTERNAL_DOCS.md  LEARNING_ENGINE.md  MEMORY_STRUCTURE.md  MODEL_USAGE_GUIDE.md  PREFERENCES_STORE.json  PROJECT_GUIDE.md  PROMPT_ENGINEERING.md  README.md  README_en.md  RELEASE_NOTES.md  ROADMAP.md  SELF_LEARNING_LOG.md  SELF_REFLECTION.md  TESTING_GUIDE.md  UI_roadmap.md  UX_GUIDE.md  asteval.py  auto_monitor_fallbacks.md  command_spec.md  config.example.yaml  config.yaml  config_utils.py  dataset.txt  dry_run_fallbacks.md  failing_tests_list.txt  fallback_behavior.md  intent_samples.json  isolation_fallbacks.md  learning_fallbacks.md  limitations.md  multi_turn_fallbacks.md  networkx.py  (+17 more)
Scraper_Wiki/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alerts.yaml  cli.py  cluster.py  dashboard.py  datasets_raw.dvc  datasets_wikipedia_pro.dvc  docker-compose.airflow.yml  docker-compose.yml  dq.py  main.py  metrics.py  prometheus.yml  pyproject.toml  requirements.txt  task_queue.py  worker.py
Scraper_Wiki/.dvc/: config
Scraper_Wiki/api/: api_app.py
Scraper_Wiki/core/: __init__.py
Scraper_Wiki/crawling/: __init__.py  auto_dataset.py  auto_learner.py  distributed.py
Scraper_Wiki/docs/: README.md  airflow.rst  code_fine_tuning.rst  conf.py  ethics.md  index.html  index.rst  knowledge_graph.md  modules.rst  postprocessing.rst  scaling.md  scheduling.md  scraper_wiki.html  search.js  setup.md  usage.md
Scraper_Wiki/enrichment/: active_learning.py  generator.py
Scraper_Wiki/examples/: active_learning.ipynb  code_dataset_config.yaml  code_fine_tuning.ipynb  export_dataset.py  filtering.ipynb  jax_fine_tuning.ipynb  lightning_fine_tuning.ipynb  mlflow_fine_tuning.ipynb  qa_training.ipynb
Scraper_Wiki/integrations/: alerts.py  binary_storage.py  datalake.py  dvc_utils.py  neo4j_backend.py  storage.py  storage_datalake.py  storage_graph.py  storage_sqlite.py  storage_vector.py  vector_storage.py
Scraper_Wiki/utils/: code.py  (+13 more)
(+351 files in other folders)
