[project]
name = "devai"
version = "0.1.0"
description = "AI powered development assistant"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="DevAI"}]

[project.dependencies]
fastapi = "*"
uvicorn = "*"
aiofiles = "*"
aiohttp = "*"
structlog = "*"
python-dotenv = "*"
trl = "*"
networkx = "*"
scikit-learn = "*"
textual = "<0.31"

[tool.pytest.ini_options]
addopts = "-q"
