[tool.poetry]
name = "scraper-wiki"
version = "0.1.0"
description = ""
authors = ["Codex <codex@openai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
wikipedia-api = ">=0.8.1"
tqdm = ">=4.67.1"
unidecode = ">=1.4.0"
datasets = ">=3.6.0"
beautifulsoup4 = ">=4.13.4"
requests = ">=2.32.4"
aiohttp = ">=3.9"
html2text = ">=2025.4.15"
backoff = ">=2.2.1"
tenacity = ">=8.2.2"
numpy = ">=1.23.5,<2.2"
spacy = {version = ">=3.8.7", optional = true}
sentence-transformers = ">=4.1.0"
scikit-learn = ">=1.7.0"
sumy = ">=0.11.0"
pyarrow = ">=20.0.0"
python-dateutil = ">=2.9.0"
fastapi = ">=0.115.13"
uvicorn = ">=0.34.3"
streamlit = ">=1.46.0"
psutil = ">=7.0.0"
typer = ">=0.16.0"
pika = ">=1.3.2"
redis = ">=5.0.0"
prometheus-client = ">=0.20.0"
networkx = ">=3.5"
simhash = ">=2.1.2"
tensorflow = {version = ">=2.16.0", optional = true}
transformers = {version = ">=4.40.0", optional = true}
googletrans = "==4.0.0rc1"
PyPDF2 = ">=3.0.1"
structlog = ">=24.1.0"
fpdf = ">=1.7.2"
"pdfminer.six" = ">=2024.0.0"
antlr4-python3-runtime = ">=4.13"
graphviz = ">=0.21"
fake-useragent = ">=1.5.3"
selenium = ">=4.20.0"
mlflow = ">=2.12.1"
optuna = ">=3.6.1"
apache-airflow = ">=2.9.1"

[tool.poetry.extras]
heavy = ["tensorflow", "transformers", "spacy"]
